--- a/testproject/package.json
+++ b/testproject/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "reactstarterproject",
+  "name": "testproject",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,11 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@tailwindcss/vite": "^4.0.9",
+    "@tailwindcss/vite": "^4.0.10",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-router-dom": "^7.2.0",
-    "tailwindcss": "^4.0.9"
+    "tailwindcss": "^4.0.10"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
