--- a/01viteReact/package.json
+++ b/01viteReact/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hangman",
+  "name": "01vitereact",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,13 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@tailwindcss/vite": "^4.0.11",
-    "autoprefixer": "^10.4.20",
-    "postcss": "^8.5.3",
+    "@tailwindcss/vite": "^4.0.13",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-router-dom": "^7.3.0",
-    "tailwindcss": "^4.0.11"
+    "tailwindcss": "^4.0.13"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
