--- a/02Counter/package.json
+++ b/02Counter/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "testproject",
+  "name": "02counter",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,12 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@tailwindcss/vite": "^4.0.10",
-    "autoprefixer": "^10.4.20",
-    "postcss": "^8.5.3",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "tailwindcss": "^4.0.10"
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
