--- a/07TickTackToe/package.json
+++ b/07TickTackToe/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hangman",
+  "name": "07ticktacktoe",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -15,7 +15,6 @@
     "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-router-dom": "^7.3.0",
     "tailwindcss": "^4.0.14"
   },
   "devDependencies": {
