--- a/08CoinGeckoCryptoTracker/package.json
+++ b/08CoinGeckoCryptoTracker/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.14",
+    "@tanstack/react-query": "^5.69.0",
     "autoprefixer": "^10.4.21",
+    "axios": "^1.8.4",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
